2010-06-07 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* include/dlvhex/MLPSolver.hpp: Minimize branching in the beginning.

2010-06-07 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Finishing Instantiation splitting.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

2010-06-06 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Implementing instantiation splitting: using Top data structure.

	* include/dlvhex/MLPSolver.hpp: Implement collecting the largest bottom.

2010-05-18  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Fix a little bug in printing M. 

2010-05-17  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/Benchmark-Summary.zip: Delete old benchmark files.
	* generator/Benchmark-Stats.zip: Likewise.
	* generator/Benchmark-Module.zip: Likewise.

2010-05-13  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/forLatex.sh: Fix a small bug about opt.

2010-05-12  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/forLatex.sh: Automatic latex table generation. 

	* generator/summaryAT.sh: Detect additional message for mem-out.

2010-05-07  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/Module.cpp: Smarter random arity predicate.

2010-05-06  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genTopologyCore.sh: Adding a new big parameter setting.

	* generator/runScriptAT.sh: Automatically kill left-over dlv.

	* generator/Module.cpp: Incorporating higher arity predicate.

	* include/dlvhex/MLPSolver.hpp: Fixing some bug when print some interpretation.
	* testsuite/TestMLPSolver.cpp: Likewise.

2010-05-02  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/summaryAT.sh: Handle time-out and mem-out.
	* generator/summaryStatsAT.sh: Likewise.
